<resources>
    <string name="app_name">Ambroise-forum</string>
    <string name="title_activity_main">Forum</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ALTEN: Application Ambroise</string>
    <string name="nav_header_subtitle">Module Forum</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="forum_name">Forum name</string>
    <string name="forum_place">Forum place</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="new_forum">New forum</string>
    <string name="unknown">Unknown</string>
    <string name="preview">Preview</string>
    <string name="title_activity_forum">ForumActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone number</string>
    <string name="mail">Mail</string>
    <string name="cv_picture">Applicant\'s CV</string>
    <string name="start_interview">Start interview</string>
    <string name="take_cv_picture">CV</string>
    <string name="cv_picture_description">CV picture</string>
    <string name="error_creating_file">An error occurred while creating the File</string>
    <string name="noMail">\@noMail.alten.com</string>
    <string name="title_activity_blbl">blbl</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="mobility">Mobility</string>
    <string name="contract">Contract</string>
    <string name="diploma">Diploma</string>
    <string name="skills">Skills</string>
    <string name="more">More</string>
    <string name="title_activity_applicant">ApplicantActivity</string>
    <string name="splashscreen">Spash screen</string>
    <string name="geographic">Geographics</string>
    <string name="france">France</string>
    <string name="franceWithoutIDF">France without IDF</string>
    <string name="international">International</string>
    <string name="mobility_radius">Within a radius of</string>
    <string name="radius">Radius</string>
    <string name="minutes">Mins</string>
    <string name="kilometers">Kms</string>
    <string name="sign_hint">Sign here</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="sign">Signature</string>
    <string name="francemobility">Mobility for France ?</string>
    <string name="begin_at">Beginning at</string>
    <string name="dateBegin">Beginning date</string>
    <string name="withinMonths">Within</string>
    <string name="months">months</string>
    <string name="number_of_months">Number of months</string>
    <string name="forTime">For</string>
    <string name="abstractContract">Resume</string>
    <string name="defaultTextMobility">Mobility, within 100 kms</string>
    <string name="add_geographic">Add</string>
    <string name="not_implemented">Tab not implemented yet</string>
    <string name="diplomas">Diplomas</string>
    <string name="graduatingYear">Year of obtention</string>
    <string name="diplomaAdd">Add Diploma</string>
    <string name="allDiplomas">All Diplomas</string>
    <string name="skillsAdd">Add Skill</string>
    <string name="allSkills">All Skills</string>
    <string name="nationality">Nationality :</string>
    <string name="driving_license">Driving license</string>
    <string name="has_vehicle">Has a personnal vehicle</string>
    <string name="french_nationality">FRENCH</string>
    <string name="european_citizenship">EUROPEAN</string>
    <string name="other_nationality">OTHER</string>
    <string name="other_infos">Other informations</string>
    <string name="minRadius">1</string>
    <string name="send_email_applicant">Send by email</string>
    <string-array name="contract_type">
        <item>Internship</item>
        <item>CDD</item>
        <item>CDI</item>
        <item>Freelance</item>
        <item>Subcontracting</item>
        <item>Reconversion</item>
    </string-array>
    <string-array name="contract_duration_type">
        <item>Days</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>
    <string name="rgpd_warning">!Applicant must read RGPD and accept it!</string>
    <string name="rgpd_accept">Do you accept that your data is saved?</string>
    <string name="applicant_accepted_and_validated">Applicant sheet created and validated</string>
    <string name="proceed">Proceed</string>
    <string name="validation_image_description">Check validation icon</string>
    <string name="opinion">Opinion</string>
    <string name="sendTo">Send by mail to</string>
    <string name="sendToHint">(separate each person by a comma \",\")</string>
    <string name="validate">Validate</string>
    <string name="forum">Forum</string>
    <string name="mission">Mission</string>
    <string name="competence">Skillsheet</string>
    <string name="menu_forum_list">Forum list</string>
    <string name="menu_applicant_list">Applicant list</string>
    <string name="action">Action</string>
    <string name="document">Documents</string>
    <string name="menu_add_forum">Create new forum</string>
    <string name="menu_add_applicant">Create new applicant</string>
    <string name="menu_document_list">Documents list</string>
</resources>