<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_forum"
            android:icon="@drawable/ic_menu_forum"
            android:title="@string/forum" />
        <item
            android:icon="@drawable/ic_menu_mission"
            android:title="@string/mission"
            android:enabled="false"/>
        <item
            android:icon="@drawable/ic_menu_competence"
            android:title="@string/competence"
            android:enabled="false"/>
    </group>

    <item android:title="@string/action">
        <menu>
            <item
                android:id="@+id/nav_forum_list"
                android:icon="@drawable/ic_menu_forum_list"
                android:title="@string/menu_forum_list" />
            <item
                android:id="@+id/nav_new_applicant"
                android:icon="@drawable/ic_baseline_add_24px"
                android:title="@string/menu_add_applicant" />
        </menu>
    </item>

    <item android:title="@string/document">
        <group android:id="@+id/nav_document">
            <item
                android:id="@+id/nav_document_list"
                android:icon="@drawable/ic_storage_black_24dp"
                android:title="@string/menu_document_list" />
        </group>
    </item>

</menu>
