<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".view.fragments.ApplicantMobilityFragment">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="362dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/other_infos"
        android:textColor="#000000"
        android:textSize="50sp"
        android:layout_marginTop="18dp" />

    <CheckBox
        android:id="@+id/license_checkbox"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/driving_license" />

    <CheckBox
        android:id="@+id/vehicle_checkbox"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/has_vehicle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/nationality" />

        <RadioGroup
            android:id="@+id/group_nationality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:tag="FRENCH"
                android:text="@string/french_nationality" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="@string/european_citizenship"
                android:text="@string/european_citizenship" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="@string/other_nationality"
                android:text="@string/other_nationality" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>