<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.ValidationFragment" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:src="@drawable/ic_sharp_check_circle_outline_24px"
        app:color="@color/green_accept"
        android:contentDescription="@string/validation_image_description" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/applicant_accepted_and_validated"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/validation_proceed"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginBottom="60dp"
        android:layout_weight="0"
        android:text="@string/proceed"
        android:textColor="@color/green_accept"
        android:textSize="22sp" />
</LinearLayout>